[gd_scene load_steps=3 format=3 uid="uid://c641tr0o7tgux"]

[ext_resource type="Script" path="res://Conveyors/Components/Detectors/direction_detector.gd" id="1_bp1ly"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vysa7"]
size = Vector2(16, 16)

[node name="DirectionDetector" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_bp1ly")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vysa7")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
